# smoothie

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
svm/: Cargo.toml
svm/assets/: SKILL.md
svm/src/: error.rs  lib.rs  main.rs
svm/src/bc/: load.rs  mod.rs  types.rs  validate.rs
svm/src/cache/: merge.rs  mod.rs  promotion.rs  tier.rs
svm/src/cli/: bc.rs  cache.rs  emit.rs  feedback.rs  glossary.rs  history.rs  hit.rs  init.rs  mod.rs  node.rs  notes.rs  ontology.rs  query.rs  rollback.rs  skill.rs  sync.rs  validate.rs  write.rs
svm/src/credentials/: mod.rs
svm/src/emit/: mod.rs  skill.rs  test.rs
svm/src/index/: glossary.rs  mod.rs  node.rs  notes.rs  schema.rs
svm/src/ontology/: load.rs  mod.rs  query.rs  types.rs  validate.rs
svm/src/policy/: audit.rs  mod.rs
svm/src/query/: display.rs  mod.rs
svm/src/storage/: file.rs  git.rs  mod.rs  port.rs
svm/tests/: contract.rs  integration.rs  unit.rs
svm/tests/contract/: cache_test.rs  emit_test.rs  glossary_test.rs  history_test.rs  hit_test.rs  init_test.rs  node_test.rs  ontology_enrichments_test.rs  ontology_query_test.rs  ontology_validate_test.rs  ontology_verb_test.rs  query_test.rs  svm_safety_test.rs  sync_test.rs  validate_test.rs  write_test.rs
svm/tests/fixtures/: bad-schema-version.json  confidence-out-of-range.json  confirmed-no-receipt.json  corpus-valid.json  empty-locator.json  escaping-companion.json  hostile-bc.json  laundered-trust.json  missing-receipt.json  restricted-corpus-bc.json  tiny-budget-bc.json  unknown-top-level.json
(+192 files in other folders)
